--- a/pepsi/src/components/HomePage/bestseller.css
+++ b/pepsi/src/components/HomePage/bestseller.css
@@ -1,4 +1,5 @@
 .bestseller-product {
+    background-color: black;
     width: 100%;
     height: 750px;
 }
@@ -24,7 +25,7 @@
 }
 
 .bestseller-upper {
-    background-color: #f86c2c;
+    background-color: black;
     text-align: center;
     font-size: 50px;
     color: white;
@@ -40,9 +41,9 @@
     font-size: 18px;
 }
 .buynow-text {
-    color: white;
+    color: black;
     text-transform: uppercase;
-    background-color: #f86c2c;
+    background-color: white;
     border-radius: 50px;
     padding: 12px 30px;
     display: inline;
@@ -61,7 +62,7 @@
     box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
     outline-color: rgba(255, 255, 255, 0);
     outline-offset: 15px;
-    text-shadow: 1px 1px 2px #f86c2c; 
+    text-shadow: 1px 1px 2px #e7e7e7; 
 }
 .swiper {
     padding: 60px;
@@ -79,6 +80,7 @@
 
 .swiper-slide {
     opacity: 0.5;
+    filter: blur(3px);
     height: 100%;
     width: auto;
     display: flex;
@@ -90,7 +92,7 @@
 }
 
 .swiper-button-prev, .swiper-button-next {
-    color: #f86c2c;
+    color: white;
 }
 .swiper-slide.swiper-slide-prev {
     transform: translateX(5%);
@@ -102,6 +104,7 @@
 
 .swiper-slide-active {
     opacity: 1;
+    filter: blur(0px);
     z-index: 1;
     transform: scale(1.4);
 }
