--- a/pepsi/src/components/HomePage/bestseller.css
+++ b/pepsi/src/components/HomePage/bestseller.css
@@ -1,7 +1,7 @@
 .bestseller-product {
     background-color: black;
     width: 100%;
-    height: 750px;
+    height: 100vh;
 }
 
 .item-img {
@@ -14,7 +14,7 @@
     flex-direction: column;
 }
 .item-box h2 {
-    color: black;
+    color: white;
 }
 
 .item-text {
@@ -29,11 +29,13 @@
     text-align: center;
     font-size: 50px;
     color: white;
-    padding: 10px;
+    padding: 40px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .bestseller-buynow {
     text-align: center;
-    padding-top: 25px;
+    padding-top: 75px;
     font-size: 24px;
 }
 .bestseller-buynow a {
@@ -107,4 +109,7 @@
     filter: blur(0px);
     z-index: 1;
     transform: scale(1.4);
+}
+.swiper-slide-active:hover {
+    scale: 1.1;
 }
