--- a/pepsi/src/components/HomePage/vdotest.css
+++ b/pepsi/src/components/HomePage/vdotest.css
@@ -1,12 +1,12 @@
 .testvdo-container{
     position: relative;
     width: 100%;
-    height: 100vh;
-    background-color: #f86c2c;
+    height: 90vh;
+    background-color: black;
 }
 .testvdo{
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 90%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -14,6 +14,8 @@
     object-fit: cover;
     z-index: 1;
     opacity: 75%;
+    top: 0%;
+    left: 10%;
 }
 
 .testoverlay {
