--- a/pepsi/src/components/product/ProductDetail/ProductStyle.css
+++ b/pepsi/src/components/product/ProductDetail/ProductStyle.css
@@ -3,13 +3,14 @@
     position: relative; 
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
+    background-color: black;
 }
 .detail-body::before{
     content: "";
-    background-image: url('https://static.vecteezy.com/system/resources/thumbnails/003/393/892/original/water-splash-slow-motion-with-droplets-on-black-background-free-video.jpg');
+    /* background-image: url('https://static.vecteezy.com/system/resources/thumbnails/003/393/892/original/water-splash-slow-motion-with-droplets-on-black-background-free-video.jpg'); */
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -33,15 +34,15 @@
     100%{transform: translateY(0vw);opacity: 1;}
 }
 .detail-container{
-    padding:240px 0px;
+    padding:0px 0px;
     position:relative;
     height: 100%;
-    display: flex;
+    display: block;
     color: white;
     justify-content: center;
     animation:backgroundAnimation 1s;
 }
-.detail-container .detail-left{
+/* .detail-container .detail-left{
     display: flex;
     flex-direction: column;
     width: 900px;
@@ -92,12 +93,13 @@
 }
 .detail-left .detail-navbar:hover{
     background: white;
-}
+} */
 
 .previousPage{
     position: absolute;
-    margin-top: 300px;
-    left:25px;
+    margin-top: 10px;
+    left: 100px;
+    bottom: 12%;
     height: 23px;
     width: 50px;
     display: flex;
@@ -110,7 +112,7 @@
     
 }
 
-.nextPage{
+/* .nextPage{
     position: absolute;
     margin-top: 300px;
     right:25px;
@@ -123,10 +125,32 @@
     background-size: cover;
     background-position: center;
     animation:objectAnimation 1.3s .5s backwards;
-}
+} */
 
-.previousPage:hover, .nextPage:hover{
+/* .previousPage:hover, .nextPage:hover{
     transition: .5s cubic-bezier(0.075, 0.82, 0.165, 1);
     background-blend-mode:saturation;
     transform: scale(1.2);
+} */
+.productvdo-container{
+    position: relative;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    z-index: 1;
+}
+.productvdo{
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    object-fit: cover;
+    z-index: 2;
 }
