--- a/pepsi/src/components/HomePage/penzillabanner.css
+++ b/pepsi/src/components/HomePage/penzillabanner.css
@@ -98,7 +98,7 @@
     text-align: center;
     opacity: 1;
 }
-.swiper {
+/* .swiper {
     padding: 60px;
 }
 
@@ -151,7 +151,7 @@
       height: 1rem;
       border-radius: .5rem;
       opacity: 1;
-  }
+  } */
 .logo-img {
     z-index: 10;
     width: 65%;
