--- a/pepsi/src/components/HomePage/vdotest.css
+++ b/pepsi/src/components/HomePage/vdotest.css
@@ -1,12 +1,18 @@
 .testvdo-container{
     position: relative;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-color: black;
+    margin-top: 100px;
 }
-.testvdo{
+.testvdo-box {
+    position: relative;
     width: 80%;
     height: 90%;
+}
+.testvdo{
+    width: 100%;
+    height: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -14,7 +20,7 @@
     object-fit: cover;
     z-index: 1;
     opacity: 75%;
-    top: 0%;
+    top: 10%;
     left: 10%;
 }
 
