--- a/pepsi/src/components/HomePage/footer.css
+++ b/pepsi/src/components/HomePage/footer.css
@@ -1,10 +1,13 @@
-@font-face {font-family: "Sofia Pro Black"; src: url("//db.onlinewebfonts.com/t/1572b251b0319fdd12219a000aad6196.eot"); src: url("//db.onlinewebfonts.com/t/1572b251b0319fdd12219a000aad6196.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/1572b251b0319fdd12219a000aad6196.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/1572b251b0319fdd12219a000aad6196.woff") format("woff"), url("//db.onlinewebfonts.com/t/1572b251b0319fdd12219a000aad6196.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/1572b251b0319fdd12219a000aad6196.svg#Sofia Pro Black") format("svg"); }
-
+@font-face {
+  font-family: 'PepsiOwners';
+  src: url('../assets/font/pepsiowners-regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 
 .footer-container{
     display: flex;
-    font-family: "Sofia Pro Black", Helvetica Neue, Helvetica, Arial, sans-serif ;
-    width: 100%;
+    font-family: 'PepsiOwners', sans-serif;
     height: 20vh;
     background-color: white ;
     color: #c3c3c3;
