--- a/pepsi/src/components/product/ProductPage.css
+++ b/pepsi/src/components/product/ProductPage.css
@@ -1,6 +1,6 @@
 *{
   box-sizing: border-box;
-  font-family: "Sofia Pro Black", Helvetica Neue, Helvetica, Arial, sans-serif ;
+  font-family: 'PepsiOwners', sans-serif;
 }
 .product-container{
   position: relative;
