--- a/pepsi/src/components/HomePage/penzillabanner.css
+++ b/pepsi/src/components/HomePage/penzillabanner.css
@@ -40,6 +40,25 @@
 }
 .penzilla-right-mid-quote h1 {
     font-size: 12vh;
+    animation: fade 4s infinite linear;
+}
+@keyframes fade {
+    0% {
+        transform: translateY(-25%);
+        opacity: 0
+    }
+    25% {
+        transform: translateY(0%);
+        opacity: 1
+    }
+    50% {
+        transform: translateY(0%);
+        opacity: 1
+    }
+    100% {
+        transform: translateY(0%);
+        opacity: 1
+    }
 }
 .penzilla-right-mid-quote h2 {
     font-size: 7vh;
