--- a/pepsi/src/components/HomePage/penzillabanner.css
+++ b/pepsi/src/components/HomePage/penzillabanner.css
@@ -40,7 +40,12 @@
 }
 .penzilla-right-mid-quote h1 {
     font-size: 12vh;
-    animation: fade 4s infinite linear;
+    /* animation: fade 4s infinite linear; */
+    /* padding: 64px; */
+    background: linear-gradient(to right, hsl(0, 0%, 50%) 0, hsl(0, 0%, 100%) 15%, hsl(0, 0%, 50%) 30%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 4s infinite linear alternate ;
 }
 @keyframes fade {
     0% {
@@ -59,6 +64,20 @@
         transform: translateY(0%);
         opacity: 1
     }
+}
+@keyframes shine {
+  0% {
+    background-position: 50px;
+  }
+  30% {
+    background-position: 50px;
+  }
+  70% {
+    background-position: 575px;
+  }
+  100% {
+    background-position: 575px;
+  }
 }
 .penzilla-right-mid-quote h2 {
     font-size: 7vh;
