--- a/pepsi/src/components/product/ProductDetail/ProductStyle.css
+++ b/pepsi/src/components/product/ProductDetail/ProductStyle.css
@@ -34,11 +34,10 @@
     100%{transform: translateY(0vw);opacity: 1;}
 }
 .detail-container{
-    padding:0px 0px;
-    position:relative;
-    height: 100%;
-    display: block;
-    color: white;
+    width: 100%;
+    background-color: black;
+    margin-top: 100px;
+    display: flex;
     justify-content: center;
     animation:backgroundAnimation 1s;
 }
@@ -133,24 +132,19 @@
     transform: scale(1.2);
 } */
 .productvdo-container{
+    top: -10px;
     position: relative;
-    top: 10%;
-    left: 10%;
-    width: 80%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    z-index: 1;
+    width: 75%;
+    aspect-ratio: 16/9;
+    overflow: hidden;
+    border-radius: 16px;
+    box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
 }
 .productvdo{
+    display: block;
+    /* position: absolute; */
     width: 100%;
     height: 100%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
-    object-fit: cover;
-    z-index: 2;
+    object-fit: contain;
+    z-index: 1;
 }
