--- a/pepsi/src/components/HomePage/bestseller.css
+++ b/pepsi/src/components/HomePage/bestseller.css
@@ -116,3 +116,18 @@
 .swiper-slide-active:hover {
     scale: 1.1;
 }
+
+
+.swiper-pagination {
+    top: 75px;
+    position: relative;
+}
+.swiper-pagination-bullet {
+    background-color: white; 
+    /* border: 2px solid white; */
+    opacity: 0.5;
+}
+.swiper-pagination-bullet-active {
+    background-color: white;
+    opacity: 1;
+}
