--- a/pepsi/src/components/HomePage/featured.css
+++ b/pepsi/src/components/HomePage/featured.css
@@ -40,14 +40,8 @@
     margin-right: auto;
     position: relative;
     top: 25%;
-}
-@keyframes shake {
-    0%{transform: scale(1.2);}
-    25%{transform: scale(1.2);}
-    50%{transform: scale(1.2);}
-    75%{transform: scale(1.2);}
-    100%{transform: scale(1.2);}
+    transition: all 0.6s ease;
 }
 .fimg:hover{
-    animation: 1s linear shake;
+    scale: 1.3;
 }
