--- a/pepsi/src/components/HomePage/vdotest.css
+++ b/pepsi/src/components/HomePage/vdotest.css
@@ -1,7 +1,8 @@
 .testvdo-container {
     width: 100%;
     background-color: black;
-    margin-top: 100px;
+    /* margin-top: 100px; */
+    padding-top: 100px;
     display: flex;
     justify-content: center;
 }
