--- a/pepsi/src/components/HomePage/vdotest.css
+++ b/pepsi/src/components/HomePage/vdotest.css
@@ -1,5 +1,6 @@
 .testvdo-container {
     width: 100%;
+    height: 100vh;
     background-color: black;
     /* margin-top: 100px; */
     padding-top: 100px;
@@ -8,23 +9,25 @@
 }
 
 .testvdo-box {
-    top: -25px;
+    top: 0px;
     position: relative;
-    width: 75%;
+    width: 100%;
     aspect-ratio: 16/9;
     overflow: hidden;
-    border-radius: 16px;
-    box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
+    
 }
 
 .testvdo {
     display: block;
-    /* position: absolute; */
-    width: 100%;
-    height: 100%;
+    position: relative;
+    aspect-ratio: 16/9;
+    width: 1080px;
+    /* height: 100%; */
     object-fit: contain;
     z-index: 1;
-  
+    border-radius: 16px;
+    box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
+    left: 15%;
 }
 
 .testoverlay {
