--- a/pepsi/src/components/product/ProductDetail/ProductStyle.css
+++ b/pepsi/src/components/product/ProductDetail/ProductStyle.css
@@ -35,11 +35,20 @@
 }
 .detail-container{
     width: 100%;
+    height: 100%;
     background-color: black;
-    margin-top: 100px;
+    padding: 50px;
     display: flex;
     justify-content: center;
+    
+}
+.detail-left {
+    flex: 70%;
     animation:backgroundAnimation 1s;
+}
+.detail-right {
+    flex: 30%;
+    
 }
 /* .detail-container .detail-left{
     display: flex;
@@ -97,8 +106,8 @@
 .previousPage{
     position: absolute;
     margin-top: 10px;
-    left: 80px;
-    bottom: 4%;
+    left: 164px;
+    bottom: 18%;
     height: 24px;
     width: 50px;
     display: flex;
@@ -107,7 +116,8 @@
     /* background: url("../ProductDetail/img_products/left_arrow.png"); */
     background-size: cover;
     background-position: center;
-    animation:objectAnimation 1.3s .5s backwards;
+    /* animation:objectAnimation 1.3s .5s backwards; */
+    animation:backgroundAnimation 1.2s;
     
 }
 .previoustext {
@@ -140,19 +150,68 @@
     transform: scale(1.2);
 } */
 .productvdo-container{
-    top: -15px;
+    top: 50px;
+    left: 100px;
     position: relative;
-    width: 75%;
+    width: 100%;
     aspect-ratio: 16/9;
     overflow: hidden;
-    border-radius: 16px;
-    box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
+    
+    
 }
 .productvdo{
     display: block;
-    /* position: absolute; */
-    width: 100%;
-    height: 100%;
+    /* position: relative; */
+    width: 830px;
+    /* height: 100%; */
     object-fit: contain;
+    aspect-ratio: 16/9;
+    border-radius: 16px;
+    box-shadow: 0 10px 25px rgba(255, 255, 255, 0.2);
     z-index: 1;
+}
+.productvdo-list {
+    display: grid;
+    position: relative;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    top: 50px;
+}
+.vdolist {
+    transition: all 0.6s ease;
+}
+.vdolist:nth-child(1) {
+    animation:backgroundAnimation 2.8s;
+}
+.vdolist:nth-child(2) {
+    animation:backgroundAnimation 2.6s;
+}
+.vdolist:nth-child(3) {
+    animation:backgroundAnimation 2.4s;
+}
+.vdolist:nth-child(4) {
+    animation:backgroundAnimation 2.2s;
+}
+.vdolist:nth-child(5) {
+    animation:backgroundAnimation 2s;
+}
+.vdolist:hover {
+    scale: 1.1;
+    transform: translate(10px, -10px);
+    cursor: pointer;
+}
+.vdolist img {
+    width: 240px;
+    border-radius: 16px;
+    /* aspect-ratio: 16/9; */
+}
+
+.productvdo.fade {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.productvdo.show {
+  opacity: 1;
+  transition: opacity 0.5s ease;
 }
