--- a/pepsi/src/components/HomePage/catagory2.css
+++ b/pepsi/src/components/HomePage/catagory2.css
@@ -13,25 +13,26 @@
   --ease-out: cubic-bezier(0.25, 1, 0.5, 1);
   --bounce-out: cubic-bezier(0.34, 1.56, 0.64, 1);
 }
-.catagory-container {
+.catagory2-container {
     width: 100%;
     height: 100vh;
     background-color: black;
     overflow: hidden;
 }
-.catagory-box {
+.catagory2-box {
     display: flex;
     flex-direction: row;
     gap: 150px;
     place-items: center;
     justify-content: center;
     margin: 0 auto;
+    margin-right: 30px;
     padding: var(--space);
     font-family: 'PepsiOwners', sans-serif;
     color: white;
     /* grid-template-columns: repeat(auto, minmax(200px, 1fr)); */
 }
-.catagory-upper {
+.catagory2-upper {
     background-color: black;
     text-align: center;
     font-size: 50px;
@@ -40,24 +41,37 @@
     margin-top: 50px;
     margin-bottom: 0px;
 }
-.promo {
+.promo2 {
     position: relative;
     cursor: pointer;
     width: var(--size);
     height: var(--size);
     
 }
-/* .promo-first{
-    --overlay-color: hotpink;
-} */
-.title {
+.promo-first {
+    /* --overlay-color: hotpink; */
+    animation:backgroundAnimation 0.5s;
+}
+.promo-second {
+    animation:backgroundAnimation 0.7s;
+}
+.promo-third {
+    animation:backgroundAnimation 0.9s;
+}
+.promo-forth {
+    animation:backgroundAnimation 1.1s;
+}
+.promo-fifth {
+    animation:backgroundAnimation 1.3s;
+}
+.title2 {
     color: white;
   /* --font-size: calc(var(--size) / 8); */
     display: flex;
     align-items: center;
     position: absolute;
     left: -5px;
-    bottom: -80px;
+    bottom: -55px;
     font-size: 30px;
     font-weight: 500;
     line-height: 1.2;
@@ -67,7 +81,7 @@
     pointer-events: none;
 }
 
-.title::after {
+.title2::after {
   display: inline-block;
     margin-left: 1.5vmin;
     font-size: calc(var(--font-size) / 3.25);
@@ -79,7 +93,7 @@
         opacity var(--duration) var(--ease-out);
 }
 
-.image-wrapper {
+.image-wrapper2 {
     width: 200px;
     height: 200px;
     overflow: hidden;
@@ -88,7 +102,7 @@
         clip-path var(--duration) var(--ease-out);
 }
 
-.image-wrapper img {
+.image-wrapper2 img {
     position: relative;
     width: 120%;
     height: 100%;
@@ -97,7 +111,7 @@
     transition: transform var(--duration) var(--ease-out);
 }
 
-.image-wrapper::after {
+.image-wrapper2::after {
     content: "";
     position: absolute;
     top: 0;
@@ -111,27 +125,55 @@
     transition: opacity var(--duration) var(--ease-out);
 }
 
-.promo:hover img {
+.promo2:hover img {
     transform: translateX(0);
 }
 
-.promo:hover .image-wrapper {
+.promo2:hover .image-wrapper2 {
     clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
     transform: translateX(25%);
     transition-timing-function: var(--bounce-out);
 }
 
-.promo:hover .title {
+.promo2:hover .title2 {
     transform: translate(5%, -50%);
     transition-timing-function: var(--bounce-out);
 }
 
-.promo:hover .title::after {
+.promo2:hover .title2::after {
     opacity: 1;
     transform: translateX(0);
     transition-timing-function: var(--bounce-out);
 }
 
-.promo:hover .image-wrapper::after {
+.promo2:hover .image-wrapper2::after {
     opacity: 1;
 }
+
+.previousPage2{
+    position: absolute;
+    margin-top: 10px;
+    left: 48.5%;
+    bottom: 20%;
+    height: 24px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    z-index: 999;
+    /* background: url("../ProductDetail/img_products/left_arrow.png"); */
+    background-size: cover;
+    background-position: center;
+    /* animation:objectAnimation 1.3s .5s backwards; */
+    animation:backgroundAnimation 0.5s;
+    
+}
+.previoustext2 {
+    color: white;
+    font-size: 36px;
+    transition: all 0.5s ease;
+}
+.previoustext2:hover {
+    transform: translate(5px, -5px);
+    scale: 1.2;
+}
+
