--- a/pepsi/src/components/HomePage/catagory.css
+++ b/pepsi/src/components/HomePage/catagory.css
@@ -56,8 +56,8 @@
     display: flex;
     align-items: center;
     position: absolute;
-    left: -5px;
-    bottom: -80px;
+    left: -75px;
+    bottom: -30px;
     font-size: 30px;
     font-weight: 500;
     line-height: 1.2;
@@ -90,10 +90,10 @@
 
 .image-wrapper img {
     position: relative;
-    width: 120%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
-    transform: translateX(-10%);
+    transform: translateX(-5%);
     transition: transform var(--duration) var(--ease-out);
 }
 
@@ -116,8 +116,8 @@
 }
 
 .promo:hover .image-wrapper {
-    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-    transform: translateX(25%);
+    /* clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%); */
+    /* transform: translateX(25%); */
     transition-timing-function: var(--bounce-out);
 }
 
