--- a/pepsi/src/components/HomePage/catagory2.css
+++ b/pepsi/src/components/HomePage/catagory2.css
@@ -70,8 +70,8 @@
     display: flex;
     align-items: center;
     position: absolute;
-    left: -5px;
-    bottom: -55px;
+    left: -20px;
+    bottom: -10px;
     font-size: 30px;
     font-weight: 500;
     line-height: 1.2;
@@ -104,10 +104,10 @@
 
 .image-wrapper2 img {
     position: relative;
-    width: 120%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
-    transform: translateX(-10%);
+    transform: translateX(-5%);
     transition: transform var(--duration) var(--ease-out);
 }
 
@@ -130,8 +130,8 @@
 }
 
 .promo2:hover .image-wrapper2 {
-    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-    transform: translateX(25%);
+    /* clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+    transform: translateX(25%); */
     transition-timing-function: var(--bounce-out);
 }
 
