--- a/pepsi/src/components/Page/ModalShow.css
+++ b/pepsi/src/components/Page/ModalShow.css
@@ -37,7 +37,7 @@
     margin: 0;
 }
 .title{
-    border-bottom: 2px solid black;
+    /* border-bottom: 2px solid black; */
     padding-bottom: 1vw;
 }
 .agear{
