--- a/pepsi/src/components/HomePage/temp1.css
+++ b/pepsi/src/components/HomePage/temp1.css
@@ -94,7 +94,7 @@
 }
 
 .temp1-fimg {
-    width: 100px;
+    width: 150px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -125,11 +125,12 @@
   background-color: black;
   width: 100%;
   height: 100%;
-  display: flex;
+  /* display: flex; */
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
   border-radius: 8px;
   overflow: hidden;
   animation:popup 1s;
+  justify-items: center;
 }
 
 /* ซ้ายเป็นรูปภาพ กว้างครึ่งนึง */
@@ -263,4 +264,7 @@
 }
 .temp1-boxf:nth-child(5) {
     animation:backgroundAnimation 1.8s;
+}
+.temp1-boxf:nth-child(6) {
+    animation:backgroundAnimation 2s;
 }
